glspectrum sketchy arithmetic

../../modules/visualization/glspectrum.c: In function ‘Thread’:
../../modules/visualization/glspectrum.c:528:43: warning: result of ‘2^16’ is 18; did you mean ‘1 << 16’ (65536)? [-Wxor-used-as-pow]
  528 |             p_dest[i] = p_output[i] *  (2 ^ 16)
      |                                           ^
      |                                         -
      |                                         1 <<
../../modules/visualization/glspectrum.c:528:41: note: you can silence this warning by using a hexadecimal constant (0x2 rather than 2)
  528 |             p_dest[i] = p_output[i] *  (2 ^ 16)
      |                                         ^
      |                                         0x2