visualization: fix xor-used-as-pow error

Fixes: #28506